Fix: fix the use of 'gap' for the content_2 rows
Wanted the content to be able to touch, but there
to be a gap between them in terms of the rows.
this term 'row-gap' just defines the gap between
the rows specifically.

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 20px;
+    row-gap: 20px;
 }
 
 .boxes {
